yaml/ddd-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ddd
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
