yaml/ddd-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ddd
  name: ddd
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ddd
---
