yaml/ddd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ddd
  name: ddd
  namespace: ddd
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ddd
    weight: 100
